--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
 
         <div class="text-container modelling">
-            <img src="res/pascal/blaise_pascal.jpg">
+            <img src="res/images/math.png">
             <div class="text">
                 Interactive Model of Pascal's Triangle
                 <p>
